// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecoverWallet should render correctly 1`] = `
<View
  appearance="default"
  level="1"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    appearance="default"
    level="1"
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
        },
        {
          "flex": 1,
        },
      ]
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
            "marginHorizontal": 37.5,
            "marginVertical": 66.7,
          },
          {
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        appearance="default"
        category="h4"
        status="basic"
        style={
          [
            {
              "color": "#222B45",
              "fontFamily": "System",
              "fontSize": 26,
              "fontWeight": "800",
            },
            {
              "marginBottom": 26.68,
              "textAlign": "center",
            },
          ]
        }
      >
        Recover wallet
      </Text>
      <Text
        appearance="default"
        category="p1"
        status="basic"
        style={
          [
            {
              "color": "#222B45",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
            },
            {
              "textAlign": "center",
            },
          ]
        }
      >
        Scan the QR code of your Guardian to recover your wallet
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(51, 102, 255, 0.08)",
            "borderColor": "#3366FF",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginTop": 80.03999999999999,
            "minHeight": 56,
            "minWidth": 56,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 16,
          }
        }
      >
        <Text
          appearance="default"
          category="p1"
          status="basic"
          style={
            [
              {
                "color": "#222B45",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
              },
              {
                "color": "#3366FF",
                "fontFamily": "System",
                "fontSize": 18,
                "fontWeight": "bold",
                "marginHorizontal": 12,
              },
            ]
          }
        >
          Scan QR code
        </Text>
      </View>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`RecoverWallet should render correctly when loading 1`] = `
<View
  appearance="default"
  level="1"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    appearance="default"
    level="1"
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
        },
        {
          "flex": 1,
        },
      ]
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
            "marginHorizontal": 37.5,
            "marginVertical": 66.7,
          },
          {
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        appearance="default"
        category="h4"
        status="basic"
        style={
          [
            {
              "color": "#222B45",
              "fontFamily": "System",
              "fontSize": 26,
              "fontWeight": "800",
            },
            {
              "marginBottom": 26.68,
              "textAlign": "center",
            },
          ]
        }
      >
        Recover wallet
      </Text>
      <Text
        appearance="default"
        category="p1"
        status="basic"
        style={
          [
            {
              "color": "#222B45",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
            },
            {
              "textAlign": "center",
            },
          ]
        }
      >
        Scan the QR code of your Guardian to recover your wallet
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          data-testid="spinner"
        />
      </View>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`RecoverWallet should render correctly when scanning 1`] = `
<View
  appearance="default"
  level="1"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    appearance="default"
    level="1"
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
        },
        {
          "flex": 1,
        },
      ]
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
            "marginHorizontal": 37.5,
            "marginVertical": 66.7,
          },
          {
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        appearance="default"
        category="h4"
        status="basic"
        style={
          [
            {
              "color": "#222B45",
              "fontFamily": "System",
              "fontSize": 26,
              "fontWeight": "800",
            },
            {
              "marginBottom": 26.68,
              "textAlign": "center",
            },
          ]
        }
      >
        Recover wallet
      </Text>
      <Text
        appearance="default"
        category="p1"
        status="basic"
        style={
          [
            {
              "color": "#222B45",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
            },
            {
              "textAlign": "center",
            },
          ]
        }
      >
        Scan the QR code of your Guardian to recover your wallet
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(51, 102, 255, 0.08)",
            "borderColor": "#3366FF",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginTop": 80.03999999999999,
            "minHeight": 56,
            "minWidth": 56,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 16,
          }
        }
      >
        <Text
          appearance="default"
          category="p1"
          status="basic"
          style={
            [
              {
                "color": "#222B45",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
              },
              {
                "color": "#3366FF",
                "fontFamily": "System",
                "fontSize": 18,
                "fontWeight": "bold",
                "marginHorizontal": 12,
              },
            ]
          }
        >
          Scan QR code
        </Text>
      </View>
      <Modal
        hardwareAccelerated={false}
        onDismiss={[MockFunction]}
        onRequestClose={[MockFunction]}
        statusBarTranslucent={false}
        transparent={true}
        visible={true}
      >
        <View
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "color-basic-transparent-600",
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="@backdrop"
          />
          <View
            backdropStyle={
              {
                "backgroundColor": "color-basic-transparent-600",
              }
            }
            onBackdropPress={[MockFunction]}
            onLayout={[Function]}
            shouldUseContainer={true}
            style={
              [
                undefined,
                {
                  "position": "absolute",
                },
                {
                  "left": -999,
                  "top": -999,
                },
              ]
            }
            visible={true}
          >
            <div
              data-testid="QRCodeScanner"
            >
              QRCodeScanner
            </div>
          </View>
        </View>
      </Modal>
    </RNCSafeAreaView>
  </View>
</View>
`;
